Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
 <p>Original Developer: <a href="http://lat.inf.tu-dresden.de/%7Eecke">Andreas Ecke</a></p>
 
-<p>Additional developer: <a href="http://lat.inf.tu-dresden.de/%7Emendez">Julian Mendez</a></p>
+<p>Additional Developer: <a href="http://lat.inf.tu-dresden.de/%7Emendez">Julian Mendez</a></p>
 
 <h3>
 <a id="source-code" class="anchor" href="#source-code" aria-hidden="true"><span class="octicon octicon-link"></span></a>Source code</h3>
@@ -53,6 +53,11 @@ $ mvn clean install
 
 <pre><code>$ mvn --offline clean install
 </code></pre>
+
+<h3>
+<a id="license" class="anchor" href="#license" aria-hidden="true"><span class="octicon octicon-link"></span></a>License</h3>
+
+<p>This software is distributed under the <a href="http://www.apache.org/licenses/LICENSE-2.0.txt">Apache License Version 2.0</a>.</p>
 
 <h3>
 <a id="contact" class="anchor" href="#contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Contact</h3>
