Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <a id="download" class="anchor" href="#download" aria-hidden="true"><span class="octicon octicon-link"></span></a>Download</h3>
 
 <ul>
-<li><a href="https://lat.inf.tu-dresden.de/systems/gel/files/gel/0.17.0/de.tu-dresden.inf.lat.gel-0.17.0.jar">Protégé plug-in</a></li>
+<li><a href="https://sourceforge.net/projects/latitude/files/gel/0.17.0/de.tu-dresden.inf.lat.gel-0.17.0.jar/download">Protégé plug-in</a></li>
 </ul>
 
 <h3>
